# Perception-RT_trainee

./: README.mdT
Summer_Assignment/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Summer_Assignment/install/conecluster/lib/conecluster/: cc  cc2  cc3  cc4  try
Summer_Assignment/install/conecluster/share/conecluster/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Summer_Assignment/log/: latest_build
Summer_Assignment/src/conecluster/: setup.cfg  setup.py
Summer_Assignment/src/conecluster/conecluster/: ass2.py
checkpoint 1/: img.py  mnist.py
